Media queries bug fixed in layout and z-index in mobile menu

--- a/proyecto-react/src/Components/Header/Header.css
+++ b/proyecto-react/src/Components/Header/Header.css
@@ -55,7 +55,9 @@ li:hover{
     padding: 2rem;
     border-radius: 1rem;
     height: auto;
+    z-index: 100;
 }
+
 
 .showMenu{
     right: 20px;
