--- a/proyecto-react/src/Components/Layout/Layout.css
+++ b/proyecto-react/src/Components/Layout/Layout.css
@@ -21,12 +21,6 @@
 
 @media (max-width: 768px){
     .container{
-        grid-template-rows: repeat(3, 1fr);
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
-@media (max-width: 600px){
-    .container{
         grid-template-rows: repeat(2, 1fr);
         grid-template-columns: repeat(2, 1fr);
     }
